--- a/package.json
+++ b/package.json
@@ -8,24 +8,20 @@
   ],
   "main": "cjs/index.js",
   "esnext": "esm/index.js",
-
   "scripts": {
-    "build": "yarn && babel esm --out-dir cjs",
-    "prepublishOnly": "npm run build",
+    "prepack": "npm install --only=dev && babel esm --out-dir cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LGSInnovations/dbus-as-promised.git"
+    "url": "git+https://github.com/LGSInnovations/node-dbus-as-promised.git"
   },
   "author": "James Cook <jcook@lgsinnovations.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/LGSInnovations/dbus-as-promised/issues"
+    "url": "https://github.com/LGSInnovations/node-dbus-as-promised/issues"
   },
-  "homepage": "https://github.com/LGSInnovations/dbus-as-promised#readme",
-
+  "homepage": "https://github.com/LGSInnovations/node-dbus-as-promised#readme",
   "dependencies": {
     "dbus": "^1.0.0"
   },
@@ -40,7 +36,7 @@
         "env",
         {
           "targets": {
-            "node": "current"
+            "node": "4"
           }
         }
       ]
